# openNFR-gui2

./: .travis.yml  2.txt  AUTHORS  BoxBrandingTest.py  Navigation.py  PowerTimer.py  README  README.md  RecordTimer.py  configure.ac  e2reactor.py  enigma2.bb  keyids.py  keymapparser.py  mytest.py  pyo_patcher.py  skin.py  timer.py  travis.yml  upgrade.py
data/vfd255/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/vfd255/lcdskins/: Makefile.am  clock_lcd_digital_red.xml  skin_display_nfr.xml  skin_lcd_default.xml  skin_lcd_picon_2.xml
lib/python/Components/Converter/: AnalogClock.py  ClientsStreaming.py  ClockToText.py  Combine.py  ConditionalShowHide.py  ConfigEntryTest.py  ConverterRotator.py  CryptoInfo.py  EGAnalogic.py  EGClockToText.py  EGExtraInfo.py  EGOnLineTest.py  EGServiceName.py  EGWeather.py  EtAnalogClock.py  EventName.py  EventTime.py  ExtendedServiceInfo.py  ExtraTuner.py  FanTempInfo.py  FrontendInfo.py  HbbtvApplicationInfo.py  Makefile.am  MenuEntryCompare.py  MovieInfo.py  NFRFunktion.py  OMaclock.py  PliExtraInfo.py  ProgressToText.py  RdsInfo.py  RemainingToText.py  SCServicePosition.py  ServiceInfo.py  ServiceName2.py  ServiceOrbitalPosition.py  ServicePosition.py  ServiceTime.py  StaticMultiList.py  Streaming.py  StringList.py  (+9 more)
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/AccuWeather/: plugin.py  setup.py  xbmc.py
lib/python/Plugins/Extensions/CustomSubservices/: LICENSE  Makefile.am  Subservice.py  SubserviceGroup.py  SubservicesQuickzapXML.py  plugin.py  subservices.xml
lib/python/Plugins/Extensions/CutListEditor/: plugin.py
lib/python/Plugins/Extensions/DVDBurn/: Bludisc.py  DVDProject.py  DVDTitle.py  DVDToolbox.py  MediumToolbox.py  Process.py  Project.py  ProjectSettings.py  plugin.py
lib/python/Plugins/Extensions/DVDPlayer/: plugin.py
lib/python/Plugins/Extensions/FileLoad/: Makefile.am  Readme  delete.py  plugin.py  upload.py
lib/python/Plugins/Extensions/FileLoad/images/: Makefile.am
lib/python/Plugins/Extensions/GraphMultiEPG/: GraphMultiEpg.py
lib/python/Plugins/Extensions/Infopanel/: Console.py  Flash_local.py  Flash_local.py~  InstallTarGZ.py  Makefile.am  Manager.py  Net_test.py  PluginWizard.py  QuickMenu.py  RestartNetwork.py  Satloader.py  ScriptRunner.py  Softcam.py  Softcamedit.py  SoftwarePanel.py  Spinner.py  SpinnerSelectionBox.py  SpinnerSelector.py  TelnetCommand.py  TelnetPrompt.py  UserMainMenu.py  bootlogo.py  bootvideo.py  diskspeed.py  e2log.py  easy_setup.py  eparted.py  iptv_convert.py  nfsedit.py  oscamsmartcard.py  outofflash.py  panel_key.py  plugin.py  setup.xml  skin_setup.py  testIP  ui.py
lib/python/Plugins/Extensions/Infopanel/Extra/: ExtrasList.py  fnmatch.py  shutil.py
lib/python/Plugins/Extensions/Infopanel/data/: Makefile.am  PluginUSBi.sh  driver.sh  (+2 more)
lib/python/Plugins/Extensions/MainMenu2/: GlobalFunctions.py  Makefile.am  __init__.py  plugin.py  usemenu.py
lib/python/Plugins/Extensions/MediaPlayer/: Makefile.am  plugin.py  settings.py
lib/python/Plugins/Extensions/MediaScanner/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/MenuSort/: Makefile.am  menusort.xml  plugin.py
lib/python/Plugins/Extensions/MiniTV/: plugin.py
lib/python/Plugins/Extensions/Modem/: plugin.py
lib/python/Plugins/Extensions/NFR4XBoot/: Makefile.am  client.py  download_images.py  ex_init.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/NFR4XBoot_4k/: Makefile.am  __init__.py  download_images.py  ex_init.py  nfr4xboot.mvi  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/NFR4XBoot_mips/: download_images.py  ex_init.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/NFR4XBoot_sh4/: Makefile.am  __init__.py  download_images.py  ex_init.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/PicturePlayer/: Makefile.am  plugin.py  ui.py
lib/python/Plugins/Extensions/QuadPip/: plugin.py  qpip.py
lib/python/Plugins/Extensions/SocketMMI/: plugin.py
lib/python/Plugins/Extensions/StartKodi/: plugin.py
lib/python/Plugins/Extensions/TVHeadEnd/: Makefile.am  TVHNimManager.py  TVHSatconfig.py  plugin.py  tvheadend.sh  tvheadend1.sh
lib/python/Plugins/Extensions/TuxboxPlugins/: plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AnimationSetup/: plugin.py
lib/python/Plugins/SystemPlugins/CableScan/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: Makefile.am  Scan.py  Scan.pyo  __init__.pyo  plugin.py  plugin.pyo
lib/python/Plugins/SystemPlugins/FastZapSupport/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/NFRLedControl/: Makefile.am  __init__.py  __init__.pyo  plugin.py  plugin.pyo
lib/python/Plugins/SystemPlugins/NetworkBrowser/: AutoMount.py  AutoMount.pyo  MountEdit.pyo  MountManager.py  MountManager.pyo  MountView.py  MountView.pyo  NetworkBrowser.pyo  UserDialog.py  UserDialog.pyo  UserManager.pyo  __init__.py  __init__.pyo  ipscan.py  ipscan.pyo  plugin.py  plugin.pyo
lib/python/Plugins/SystemPlugins/NetworkBrowser2/: AutoMount.py  Makefile.am  MountEdit.py  MountManager.py  MountView.py  NetworkBrowser.py  UserDialog.py  UserManager.py  __init__.py  ipscan.py  plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py
lib/python/Plugins/SystemPlugins/SatelliteEquipmentControl/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  ImageBackup.py  ImageBackup.py~  ImageWizard.py  Makefile.am  Multibootmgr.py  SoftwareTools.py  plugin.py
lib/python/Plugins/SystemPlugins/UI3DSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
(+992 files in other folders)
