SUBDIRS = lcdskins
installdir = $(pkgdatadir)/display/skin_default
dist_install_DATA = skin_display.xml skin_display_nfr.xml skin_display_picon.xml skin_display_prev.png skin_display_picon_prev.png prev.png piconprev.png update.png txt.png tuner-d.png tuner-d-act.png tuner-c.png tuner-c-act.png tuner-b.png tuner-b-act.png tuner-a.png tuner-a-act.png stop.png slow.png rec.png play.png pause.png hd.png forward.png format.png dolby.png crypt.png backward.png 

